--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.5.2
 autopep8==1.6.0
 Django==4.0.6
+gunicorn==20.1.0
+mysqlclient==2.1.1
 Pillow==9.2.0
 pycodestyle==2.9.0
 python-decouple==3.6
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2022.1
+whitenoise==6.2.0
